# intel-ethernet-hal

./: .gitignore  CMakeLists.txt  OPENAVNU_INTEGRATION.md  README.md  build_windows.bat  validate_hal.py
.github/: FUNDING.yml  copilot-instructions.md
cmake/: intel-ethernet-hal-config.cmake.in
examples/: CMakeLists.txt  hal_device_info.c  hal_enable_timestamping.c
include/: intel_ethernet_hal.h
src/: intel_hal_private.h
src/common/: intel_device.c
src/hal/: intel_hal.c
src/windows/: intel_ndis.c
tests/: CMakeLists.txt  hal_device_test.c  intel_hal_full_test.c
